# cuda_spatial_deform

./: .gitignore  LICENSE  README.md  __init__.py  deform.py  python_augmentation.py  requirements.txt
cuda_backend/: CMakeLists.txt  py_api.py
cuda_backend/kernel/: interpolate.cu  interpolate.cuh  mode_index.cu  mode_index.cuh  ops_copy.cu  ops_copy.cuh  scale.cu  scale.cuh  spatial_deform.cu  spatial_deform.cuh  test.cu  utils.cu  utils.cuh
doc/: doc.md
